--- a/cloudinary.yaml
+++ b/cloudinary.yaml
@@ -1,2 +1,3 @@
 enabled: true
-text_var: Custom Text added by the **Cloudinary** plugin (disable plugin to remove)
+text_var: still testing
+cloud_name: netzhexe
