--- a/cloudinary.yaml
+++ b/cloudinary.yaml
@@ -1,3 +1,9 @@
 enabled: true
-text_var: still testing
 cloud_name: netzhexe
+options:
+    video:
+        listing:
+            format: jpg
+        single:
+            controls: true
+            width: 800
