--- a/languages.yaml
+++ b/languages.yaml
@@ -1,4 +1,7 @@
 en:
   PLUGIN_CLOUDINARY:
-    TEXT_VARIABLE: Text Variable
-    TEXT_VARIABLE_HELP: Text to add to the top of a page
+    ALT_PREFIX: 'preview of'
+
+de:
+  PLUGIN_CLOUDINARY:
+    ALT_PREFIX: 'Vorschaubild von'
