--- a/blueprints/cloudinary-video.yaml
+++ b/blueprints/cloudinary-video.yaml
@@ -13,14 +13,30 @@ form:
           title: Cloudinary
           fields:
             header.public_id:
-              type: text
+              type: cl-file
               label: PLUGIN_CLOUDINARY.PUBLIC_ID
               validate:
                 type: required
             header.options:
               type: array
               label: PLUGIN_CLOUDINARY.OPTIONS
+              config-default@: plugins.cloudinary.defaults_video.options
+            file_upload:
+              name: upload_video
+              type: file
+              label: Upload file to Cloudinary
+              destination: 'self@'
+              accept:
+                - video/*
+              process:
+                  - upload: false
+                  - uploadFile:
+                  - message: 'Uploaded!'
+                  - reset: true
             upload:
               type: display
               label: PLUGIN_CLOUDINARY.UPLOAD_BUTTON
               content: <button id="cl_upload_widget" class="cloudinary-button">PLUGIN_CLOUDINARY.UPLOAD_BUTTON</button>
+            upload_widget:
+              type: display
+              content: -replace this with inline js-
