--- a/blueprints/cloudinary-video.yaml
+++ b/blueprints/cloudinary-video.yaml
@@ -17,18 +17,15 @@ form:
               label: PLUGIN_CLOUDINARY.PUBLIC_ID
               validate:
                 type: required
-            file_upload:
-              name: upload_video
-              type: cl-upload
-              label: PLUGIN_CLOUDINARY.CL_UPLOAD
-              destination: 'self@'
-              accept:
-                - video/*
-              process:
-                  - upload: false
-                  - uploadFile:
-                  - propagation: stop
-            header.options:
+            header.video.options:
               type: array
-              label: PLUGIN_CLOUDINARY.OPTIONS
-              config-default@: plugins.cloudinary.defaults_video.options
+              label: PLUGIN_CLOUDINARY.VIDEO_OPTIONS
+              config-default@: plugins.cloudinary.defaults_video.video_options
+            header.poster.options:
+              type: array
+              label: PLUGIN_CLOUDINARY.POSTER_OPTIONS
+              config-default@: plugins.cloudinary.defaults_video.poster_options
+            library-widget:
+              type: cl-display
+              label: Cloudinary library
+              content: teeeest
