--- a/cloudinary.yaml
+++ b/cloudinary.yaml
@@ -5,7 +5,7 @@ secret: your_secret
 defaults_gallery:
   options:
     fetch_format: auto
-    quality: 70
+    quality: 75
 maxWidth: 600
 minWidth: 200
 stepSize: 200
@@ -18,10 +18,14 @@ size:
     screenSize: (min-width:45em)
     imageSize: 33vw
 defaults_video:
-  options:
+  video_options:
     width: 900
+    video_codec: auto
     controls: true
+  poster_options:
     fetch_format: auto
+    start_offset: 2
+    width: 900
 defaults_image:
   options:
     width: 1280
