added upload widget for images and fixed upload preset not being used properly

--- a/blueprints/cloudinary-image.yaml
+++ b/blueprints/cloudinary-image.yaml
@@ -13,7 +13,7 @@ form:
           title: Cloudinary
           fields:
             header.public_id:
-              type: text
+              type: cl-img
               label: PLUGIN_CLOUDINARY.PUBLIC_ID
               validate:
                 type: required
