--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -1,5 +1,5 @@
 name: Cloudinary
-version: 1.1.5
+version: 1.2.1
 description: Cloudinary service integration for Grav.
 icon: cloud
 author:
@@ -8,7 +8,7 @@ author:
 homepage: https://github.com/skinofthesoul/grav-plugin-cloudinary
 keywords: grav, plugin, video management, image management, asset management
 bugs: https://github.com/skinofthesoul/grav-plugin-cloudinary/issues
-docs: https://github.com/skinofthesoul/grav-plugin-cloudinary/blob/develop/README.md
+docs: https://github.com/skinofthesoul/grav-plugin-cloudinary/blob/master/README.md
 license: MIT
 
 form:
@@ -46,59 +46,13 @@ form:
       type: text
       label: PLUGIN_CLOUDINARY.UNSIGNED_PRESET
 
-    defaults_gallery:
-      type: section
-      title: PLUGIN_CLOUDINARY.DEFAULTS_GALLERY
-      underline: false
-
-    defaults_gallery.options:
-      label: PLUGIN_CLOUDINARY.DEFAULTS_GALLERY
-      type: array
-      help: list of parameters for images
-
-    maxWidth:
-      type: number
-      label: PLUGIN_CLOUDINARY.MAX_WIDTH
-      #placeholder: 1320
-
-    minWidth:
-      type: number
-      label: PLUGIN_CLOUDINARY.MIN_WIDTH
-      #placeholder: 320
-
-    stepSize:
-      type: number
-      label: PLUGIN_CLOUDINARY.STEP_SIZE
-      placeholder: 200
-
-    defaultImageSize:
-      type: text
-      label: PLUGIN_CLOUDINARY.DEFAULT_SIZE
-      default: 100vw
-
-    size:
-      type: list
-      label: PLUGIN_CLOUDINARY.IMAGE_SIZES
-      btnLabel: PLUGIN_CLOUDINARY.ADD_SIZE
-
-      fields:
-        .screenSize:
-          type: text
-          label: PLUGIN_CLOUDINARY.SCREEN_SIZE
-          placeholder: (min-width:36em)
-
-        .imageSize:
-          type: text
-          label: PLUGIN_CLOUDINARY.IMAGE_SIZE
-          placeholder: 50vw
-
     defaults_video:
       type: section
       title: PLUGIN_CLOUDINARY.DEFAULTS_VIDEO
       underline: false
 
     defaults_video.video_options:
-      help: "Make sure these match your Cloudinary settings for videos larger than 40 MB!"
+      help: PLUGIN_CLOUDINARY.VIDEO_OPTIONS_HELP
       label: PLUGIN_CLOUDINARY.DEFAULTS_VIDEO_LINK
       type: array
 
